Tidy code: Remove unecessary line breaks and ensure uniformity in spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Google Font Import */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100..600&family=Roboto:wght@300..500&display=swap');
 
 /* Custom Properties (variables reassigned below in 'dark mode' media query) */
@@ -76,7 +77,7 @@ h4 {
     line-height: 1.5em;
 }
 
-/* SECTION: Header */
+/* SECTION: Header inc. Nav */
 header {
     display: flex;
     flex-direction: row;
@@ -87,7 +88,7 @@ header {
 }
 
 /* Styles 'World of' in header site name */
-#site-name h1 span {
+#world-of {
     letter-spacing: .4rem;
     font-weight: 200;
     font-size: 2.35rem;
@@ -102,7 +103,6 @@ header {
     border-radius: 50%;
     display: inline-block;
     line-height: 90px;
-
 }
 
 header a {
@@ -161,7 +161,6 @@ hr {
 }
 
 /* Hero Image: Per Page */
-
 #hero-home {
     background: url('../images/whippet-in-front-of-sea.png') no-repeat center center;
     background-size: cover;
@@ -181,9 +180,7 @@ hr {
     background-position-y: 32%;
 }
 
-
 /* Social Media Links */
-
 #social-media {
     position: absolute;
     right: 5%;
@@ -200,7 +197,6 @@ hr {
 }
 
 /* SECTION: Introduction: About & Fact File (Homepage) */
-
 #introduction {
     display: flex;
     justify-content: space-around;
@@ -257,7 +253,6 @@ p {
 }
 
 /* Card Styles */
-
 .card-effects {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
     transition: 0.5s;
@@ -307,7 +302,6 @@ p {
 }
 
 /* SECTION: Common Misconceptions About The Breed (Homepage) */
-
 #myths h2 {
     clear: both;
     padding: 1rem 0 1.5rem 0;
@@ -330,6 +324,7 @@ p {
     font-weight: 500;
     font-family: Raleway, Geneva, sans-serif;
 }
+
 /* SECTION: Whippets & Sighthounds (Homepage) */
 .cta, .cta a {
     text-align: center;
@@ -337,8 +332,8 @@ p {
     text-decoration: none;
     padding: 1rem 0 1rem 0;
 }
-/* SECTION: Adoption Cards */
 
+/* SECTION: Adoption Cards */
 .shelter-details {
     display: grid;
     grid-template-rows: 88px 80px 40px 40px;
@@ -357,7 +352,6 @@ p {
 }
 
 /* SECTION: Footer area */
-
 footer {
     margin: 30px 0 0 0;
     color: var(--dark-grey);
@@ -378,7 +372,6 @@ footer {
 }
 
 /* Forms */
-
 #contact {
     margin: 0 auto;
     text-align: center;
@@ -421,7 +414,6 @@ input[type="submit"] {
 }
 
 /* Legal */
-
 #legal {
     margin: 2rem 1rem 1rem 1rem;
     padding: 0;
@@ -430,7 +422,6 @@ input[type="submit"] {
 /* MEDIA QUERIES */
 
 /* Screen Sizes */
-
 @media screen and (min-width:1615px) {
     #hero-home {
         background-position-y: center;
@@ -466,7 +457,6 @@ input[type="submit"] {
 }
 
 /* Dark Mode */
-
 @media (prefers-color-scheme: dark) {
     :root {
         --mid-grey: #7995bee8;
